chore(demo): fix examples in dark mode (#781)

--- a/projects/demo/src/styles.less
+++ b/projects/demo/src/styles.less
@@ -10,6 +10,14 @@ body {
     height: 100%;
 }
 
+html {
+    color-scheme: light;
+}
+
+[data-mode='onDark'] {
+    color-scheme: dark;
+}
+
 markdown {
     li li {
         // nested list
